examples/test/testpolicy2067.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2067
  namespace: namespace145
spec:
  podSelector:
    matchLabels:
      key40: value12
      key4: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value12
          key10: value6
          key11: value16
      podSelector:
        matchLabels:
          key37: value36
          key36: value16
          key26: value15
